# dev-toolbox

./: Cargo.toml  README.md  io.github.avomar.dev-toolbox.json  justfile
i18n/en/: dev_toolbox.ftl
resources/: app.desktop  app.metainfo.xml  io.github.avomar.dev-toolbox.desktop  io.github.avomar.dev-toolbox.metainfo.xml
src/: app.rs  class.rs  main.rs
src/context_drawer_pages/: about_page.rs  mod.rs
src/utility_pages/: base64_string_encoder_decoder_page.rs  data_converter_formatter_page.rs  gzip_compressor_decompressor_page.rs  jwt_debugger_page.rs  lorem_ipsum_generator_page.rs  mod.rs  unix_time_converter_page.rs  url_encoder_decoder_page.rs
