[package]
name = "dev-toolbox"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "Everyday utilities for developers"
repository = "https://github.com/avomar/dev-toolbox.git"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.44"
futures-util = "0.3.32"
i18n-embed = { version = "0.16.0", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
lipsum = "0.9.1"
open = "5.3.3"
quick-xml = {version = "0.39.2", features = ["serialize"]}
rand = "0.8.5"
rust-embed = "8.11.0"
serde = "1.0.228"
serde-saphyr = "0.0.21"
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.6"
url = "2.5.8"
urlencoding = "2.1.3"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # About widget for the app
    "about",
    # Uses cosmic-settings-daemon to watch for config file changes
    # "dbus-config",
    # Support creating additional application windows.
    # "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
]
